<?xml version="1.0"?>
<package format="2">
  <name>arti_graph_processing</name>
  <version>1.0.0</version>
  <description>The graph_processing package</description>


  <maintainer email="c.muehlbacher@arti-robots.com">Clemens Mühlbacher</maintainer>

  <license>BSD</license>
  

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>arti_ros_param</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>arti_ros_param</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>arti_ros_param</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
  </export>
</package>
